# thepit

./: .env.example  .env.test.example  .gitignore  .opencode.json  .vercelignore  2026-02-11_00-45-08_runnerboy.md  2026-02-11_01-05-21_runnerboy.md  AGENTS.md  ARCHITECTURE.md  BUILDING.md  CLAUDE.md  Dockerfile  EVAL.md  Makefile  PLAN.md  README.md  ROADMAP.md  SPEC.md  config.toml  drizzle.config.ts  entrypoint.sh  eslint.config.mjs  go.work  instrumentation-client.ts  instrumentation.ts  interview-prep.ics  justfile  master-agentic.md  master.md  middleware.ts  next.config.ts  orchestrate.sh  orchestration-layer-starting-template.md  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  posthog-setup-report.md  sentry.client.config.ts  sentry.edge.config.ts  (+8 more)
app/: README.md  (+11 more)
piteval/: pyproject.toml
piteval/piteval/: __init__.py  analyzer.py  assembler.py  bundler.py  caller.py  cli.py  models.py  parser.py  reporter.py  schema.py
piteval/results/: 101_claude-sonnet-4-6_iter1.json  101_gemini-2.5-pro_iter1.json  102_claude-sonnet-4-6_iter1.json  102_gemini-2.5-pro_iter1.json  102_gpt-5.2_iter1.json  103_claude-sonnet-4-6_iter1.json  103_gemini-2.5-pro_iter1.json  103_gpt-5.2_iter1.json  104_claude-sonnet-4-6_iter1.json  104_gemini-2.5-pro_iter1.json  104_gpt-5.2_iter1.json  105_claude-sonnet-4-6_iter1.json  105_gemini-2.5-pro_iter1.json  105_gpt-5.2_iter1.json  106_claude-sonnet-4-6_iter1.json  106_gemini-2.5-pro_iter1.json  106_gpt-5.2_iter1.json  107_claude-sonnet-4-6_iter1.json  (+13 more)
pitkeel/: analysis.py  git_io.py  go.mod  keelstate.py  main.go  main_test.go  pitkeel.py  pyproject.toml  test_analysis.py
(+1975 files in other folders)
