[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "piteval"
version = "0.1.0"
description = "Multi-model codebase evaluation engine for THE PIT"
requires-python = ">=3.12"
dependencies = [
    # LLM providers
    "anthropic>=0.52.0",
    "openai>=1.82.0",
    "google-genai>=1.14.0",
    # Data & statistics
    "pandas>=2.2.0",
    "pingouin>=0.5.5",
    "krippendorff>=0.7.0",
    "scipy>=1.14.0",
    "numpy>=2.0.0",
    # Visualization
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    # Schema validation
    "pydantic>=2.10.0",
    # Token counting
    "tiktoken>=0.9.0",
    # Config
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.0",
]

[project.scripts]
piteval = "piteval.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
